# faster-mcts

./: CMakeLists.txt  main.cpp  mcts.cpp  mcts.h  node.cpp  node.h  train.h
TicTacToe/: mcts_ttt.cpp  mcts_ttt.h  ttt_node.cpp  ttt_node.h
